Добавил в GET / получение кол-ва элементов
